<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Study On-The-Go</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- activity_main.xml -->
    <string name="username_label">Username:</string>
    <string name="password_label">Password:</string>
    <string name="login_button_label">Login</string>
    <string name="title_activity_app_core">Study On-The-Go</string>

    <!-- activity_search_study_groups.xml -->


    <!-- activity_study_group_details.xml -->
    <string name="title_activity_study_group_details">Study Group Details</string>
    <string name="group_name_label"><b>Group Name:</b></string>
    <string name="course_label"><b>Course:</b></string>
    <string name="admin_label"><b>Admin:</b></string>
    <string name="description_label"><b>Description:</b></string>
    <string name="building_label"><b>Building:</b></string>
    <string name="location_label"><b>Location:</b></string>
    <string name="start_date_label"><b>Start Date:</b></string>
    <string name="end_date_label"><b>End Date:</b></string>
    <string name="start_time_label"><b>Start Time:</b></string>
    <string name="end_time_label"><b>End Time:</b></string>
    <string name="members_count_label"><b>Members Count:</b></string>
    <string name="members_limit_label"><b>No. Of Attendees</b></string>
    <string name="send_request_button_label">Send Request</string>

    <!-- fragment_active_group.xml -->
    <string name="create_new_group_button_label">Create New Study Group</string>
    <string name="group_label"><b><u>Group</u></b></string>
    <string name="requests_label"><b><u>Requests</u></b></string>
    <string name="members_label"><b><u>Members</u></b></string>

    <!-- activity_create_group.xml -->
    <string name="title_activity_create_group">Create New Study Group</string>
    <string name="create_group_button_label">Create Group</string>

    <!-- inner_fragment_no_group.xml -->
    <string name="not_in_group"><b>Not in a group.</b></string>

    <!-- inner_fragment_admin_group.xml -->
    <string name="admin_of_group"><b>Admin of this group.</b></string>

    <!-- fragment_search_study_groups.xml -->
    <string name="course_hint"><i>Course(s)</i></string>
    <string name="building_hint"><i>Building</i></string>
    <string name="search_button_label">Search</string>

    <!-- row_study_group.xml -->
    <string name="group_name"><b><u>Group Name</u></b></string>
    <string name="course"><b><u>Course</u></b></string>
    <string name="building"><b><u>Building</u></b></string>

    <!-- activity_active_group_details.xml & fragment_profile.xml -->
    <string name="title_activity_active_group_details">My Study Group</string>
    <string name="username_bold_label"><b>Username:</b></string>
    <string name="first_name_label"><b>First Name:</b></string>
    <string name="skills_label"><b>Skills:</b></string>
    <string name="year_label"><b>Year:</b></string>
    <string name="major_label"><b>Major:</b></string>
    <string name="specialization_label">Specialization:</string>
    <string name="last_name_label"><b>Last Name:</b></string>
    <string name="save_profile_button_label">Save</string>
    <string name="courses_label"><b>Courses:</b></string>

    <!-- activity_request_to_join.xml -->
    <string name="title_activity_request_to_join">Request</string>
    <string name="respond_to_request">Respond To Request</string>

    <!-- activity_member.xml -->
    <string name="title_activity_member">Member</string>
    <string name="title_activity_sliding_tabs">SlidingTabsActivity</string>
    <string name="cancel_profile_button_label">Cancel</string>
    <string name="edit_profile_button_label">Edit</string>

</resources>
